--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ cache: pip
 
 install:
   - pip install -r tools/requirements-devel.txt 
+  - pip install .
 
 script:
   - for f in `find rules -iname '*.yml'`; do
