travis: add rule filename

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ install:
 
 script:
   - for f in `find rules -iname '*.yml'`; do
+      echo "== rule $f";
       sigmac --target sumologic -c tools/config/sumologic.yml $f;
     done
