--- a/tools/config/sumologic.yml
+++ b/tools/config/sumologic.yml
@@ -6,6 +6,9 @@ backends:
 # typically rule on _sourceCategory, _index or Field Extraction Rules (FER)
 # supposing existing FER for service, EventChannel, EventID
 logsources:
+  unix:
+    product: unix
+    index: UNIX
   linux:
     product: linux
     index: LINUX
@@ -58,7 +61,28 @@ logsources:
     product: apache
     service: apache
     index: WEBSERVER
+  webserver:
+    category: webserver
+    index: WEBSERVER
   firewall:
     product: firewall
     index: FIREWALL
+  network-dns:
+    product: dns
+    index: DNS
+  application-sql:
+    product: sql
+    index: DATABASE
+  application-python:
+    product: python
+    index: APPLICATIONS
+  application-django:
+    product: django
+    index: DJANGO
+  application-rails:
+    product: rails
+    index: RAILS
+  application-spring:
+    product: spring
+    index: spring
 # if no index, search in all indexes
