config/sumologic: more index mappings

--- a/tools/config/sumologic.yml
+++ b/tools/config/sumologic.yml
@@ -61,15 +61,30 @@ logsources:
     product: apache
     service: apache
     index: WEBSERVER
+  apache2:
+    product: apache
+    index: WEBSERVER
   webserver:
     category: webserver
     index: WEBSERVER
   firewall:
+    category: firewall
+    index: FIREWALL
+  firewall2:
     product: firewall
     index: FIREWALL
   network-dns:
+    category: dns
+    index: DNS
+  network-dns2:
     product: dns
     index: DNS
+  proxy:
+    category: proxy
+    index: PROXY
+  antivirus:
+    product: antivirus
+    index: ANTIVIRUS
   application-sql:
     product: sql
     index: DATABASE
@@ -82,7 +97,11 @@ logsources:
   application-rails:
     product: rails
     index: RAILS
+  application-rails:
+    category: application
+    product: ruby_on_rails
+    index: RAILS
   application-spring:
     product: spring
-    index: spring
+    index: SPRING
 # if no index, search in all indexes
