map windows process_creation to EventID 4688/native or 1/sysmon

--- a/tools/config/sumologic.yml
+++ b/tools/config/sumologic.yml
@@ -57,6 +57,13 @@ logsources:
     conditions: 
       EventChannel: Microsoft-Windows-DHCP-Server
     index: WINDOWS
+  windows-process_creation:
+    category: process_creation
+    product: windows
+    conditions:
+      EventID:
+        - 4688
+        - 1
   apache:
     product: apache
     service: apache
