sumologic config: add auditd

--- a/tools/config/sumologic.yml
+++ b/tools/config/sumologic.yml
@@ -24,6 +24,10 @@ logsources:
     product: linux
     service: clamav
     index: LINUX
+  linux-auditd:
+    product: linux
+    service: auditd
+    index: AUDITD
   windows:
     product: windows
     index: WINDOWS
